--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,7 @@ html {
 
 body {
 
+    display: flex;
     height: 100vh;
     background: var(--background);
 
@@ -35,7 +36,7 @@ body {
 body, button, input, textarea {
 
     /* Intervalo de tamanho */
-    /* clamp(Tamanho Minimo, Tamanho Normal, Tamanho Máximo) */
+    /* clamp(Tamanho Minimo, Tamanho Enorme, Tamanho Normal) */
     /* Isso deixa naturalmente responsivo */
 
     font-size: clamp(14px, 1.6rem, 2vw);
@@ -67,7 +68,7 @@ input, button, .button {
 }
 
 button, .button {
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-weight: 500;
     line-height: 0;
 
@@ -87,7 +88,7 @@ button:hover, .button:hover {
     filter: brightness(1.2);
 }
 
-button > img
+button > img,
 .button > img {
     margin-right: 1rem;
     width: 2rem;
