Aula 03 – Controlando o Back end

--- a/styles/room.css
+++ b/styles/room.css
@@ -1,5 +1,4 @@
 .content {
-    max-width: 90%;
     max-width: min(112rem, 90%);
 }
 
@@ -33,6 +32,10 @@
 #room header .buttons .button:nth-child(2) img{ 
     width: 2rem;
     height: 2rem;
+}
+
+#room main {
+    padding-bottom: 2.4rem ;
 }
 
 /** Question Form **/
@@ -82,6 +85,7 @@
 #question-form form footer > div {
     display: flex;
     align-items: center;
+    
     color: var(--icons-details);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -96,4 +100,65 @@
     height: auto;
     padding: .8rem 2.4rem;
     line-height: 2.4rem;
+}
+
+/* QUESTIONS */
+
+.question-wrapper {
+    background: var(--light-blue);
+    margin-bottom: .8rem;
+    border-radius: 0 .8rem .8rem .8rem;
+    padding: 2.4rem;
+}
+
+.question-wrapper .question-content {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 2.4rem;
+}
+
+.question-wrapper .question-content .user{
+    background: var(--blue);
+    clip-path: circle();
+    padding: 1.4rem;
+
+}
+
+.question-wrapper .question-content p{
+    margin-left: 1.6rem;
+    word-break: break-word;
+    display: flex;
+    align-items: center;
+    min-height: 5.5rem;
+}
+
+.question-wrapper .actions {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;    
+}
+
+.question-wrapper .actions > a {
+    display: flex;
+    align-items: center; 
+    color: var(--grey-dark);
+}
+
+.question-wrapper .actions > a > img{
+    margin-right: .8rem;
+}
+
+/* Seletor + Irmão --> Aplica apenas no irmão */
+.question-wrapper .actions > a + a {
+    margin-left: 2.4rem;
+}
+
+/* Question Read */
+
+.question-wrapper.read {
+    background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content .user{
+    background: var(--grey-blue);
 }
