--- a/styles/global.css
+++ b/styles/global.css
@@ -18,7 +18,11 @@ html {
 
     --grey-dark: #4D5E77;    
     --grey-blue: #A1B2CD;    
-    --grey-light: #E5EAF1;    
+    --grey-light: #E5EAF1;  
+    --grey-medium: #EAECF2;  
+
+
+      
 
     /* 1rem = 16px (User Agent) Desktop == 100% (User Agent) */
     font-size: 62.5%; /* 10px */
@@ -36,9 +40,20 @@ body {
 body, button, input, textarea {
 
     /* Intervalo de tamanho */
-    /* clamp(Tamanho Minimo, Tamanho Enorme, Tamanho Normal) */
+    /* Uma ótima prática */
+    /* clamp(Tamanho Minimo, Tamanho Ideal, Tamanho Máximo) */
+    /* Tamanho Minimo: 
+        A fonte desce até o valor. 
+        Se a tela for muito pequena e passe do valor, então não muda. 
+        Ela fica travado no valor.
+    /* Tamanho Ideal:
+        Sempre que possivel vai usar esse valor.
+    */
+    /* Tamanho Máximo:
+        A fonte cresce até o valor.
+        Se a tela for muito grande e passe do valor, então não muda. 
+        Ela fica travado no valor. */
     /* Isso deixa naturalmente responsivo */
-
     font-size: clamp(14px, 1.6rem, 2vw);
     font-family: 'Open Sans', sans-serif;
     
@@ -56,7 +71,7 @@ body, button, input, textarea {
     padding:0;
     margin: -1px;
     overflow: hidden;
-    clip-path: rect(0,0,0,0);
+    clip: rect(0,0,0,0);
     white-space: nowrap;
     border-width: 0;
 }
@@ -65,6 +80,7 @@ body, button, input, textarea {
 input, button, .button {
     border-radius: .8rem; 
     height: 5rem;
+    outline: none;
 }
 
 button, .button {
@@ -102,6 +118,20 @@ button.outlined,
     border: .2rem solid var(--blue);
 
 }
+
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey {
+    background: var(--grey-light);
+    color: var(--grey-dark);
+}
+
+/* HEADER */
 
 .content header {
     width: 80%;
