--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -58,6 +58,9 @@
                     </form>
                 </section>
 
+                 <!-- FAZER IF do tem ou não pergunta aqui -->
+                <!-- Ou mostra questions ou outra seção de não tem pergunta-->
+
                 <section id="questions">
                     <h2 class="sr-only">Perguntas da comunidade</h2>
                     <div class="questions">
